@@ -1,16 +1,16 @@
 package ndr.brt.tradegs.discogs;
 
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
 import org.apache.commons.lang3.math.NumberUtils;
 import org.slf4j.Logger;
 
 import java.math.BigDecimal;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.concurrent.atomic.AtomicLong;
 
 import static java.math.BigDecimal.valueOf;
-import static jdk.incubator.http.HttpClient.newHttpClient;
+import static java.net.http.HttpClient.newHttpClient;
 import static org.slf4j.LoggerFactory.getLogger;
 
 public class ThrottledRequestsExecutor implements RequestsExecutor {
@@ -28,7 +28,7 @@ public class ThrottledRequestsExecutor implements RequestsExecutor {
         try {
             log.info("Wait {} milliseconds before the next call", throttleMillis.get());
             Thread.sleep(throttleMillis.get());
-            HttpResponse<String> response = http.send(request, HttpResponse.BodyHandler.asString());
+            HttpResponse<String> response = http.send(request, HttpResponse.BodyHandlers.ofString());
 
             response.headers().firstValue("x-discogs-ratelimit")
                     .map(NumberUtils::createLong)
